--- a/Banner-js-jquery/css/WaterfallFlow.css
+++ b/Banner-js-jquery/css/WaterfallFlow.css
@@ -40,7 +40,7 @@
     height: 300px;
 }
 
-.login .title{
+ .title{
     width: 100%;
     height: 50px;
     text-align: center;
@@ -48,5 +48,83 @@
     font-size: 20px;
     font-weight: bolder;
     font-family: 微软雅黑;
+    padding-bottom: 12px;
+}
+ .item{
+    margin:0 auto;
+    width: 400px;
+    height: 50px;
+    padding-bottom: 12px;
+}
+ .item label{
+    color: #888888;
+    font-size: 20px;
+    display: inline-block;
+     width: 100px;
+    text-align: right;
 }
 
+ .item .input{
+    line-height: 30px;
+    width: 230px;
+}
+ .itembutton{
+    width: 220px;
+    height: 40px;
+    margin: 0 auto;
+    padding-left: 10px;
+}
+ .itembutton .inputButton{
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    background: orangered;
+    font-size: 15px;
+    color: white;
+    font-weight: bold;
+}
+.itembutton .inputButton:hover{
+    width: 97%;
+    height: 97%;
+}
+
+.close{
+    float: right;
+    margin-top: -11px;
+    margin-right: -11px;
+    border-radius: 100%;
+    border: 2px solid white;
+    width: 22px;
+    height: 22px;
+    font-size: 20px;
+    text-align: center;
+    line-height: 22px;
+    background-color: #d9dde1;
+}
+
+.close:hover{
+    width: 24px;
+    height: 24px;
+    font-size: 22px;
+    line-height: 24px;
+    background: #888888;
+    cursor: pointer;
+}
+
+#SignIn{
+    display: none;
+}
+
+#SignUp{
+    display: none;
+}
+
+#layout-pop{
+    display: none;
+}
+
+#layout-mask{
+    display: none;
+}
