--- a/Banner-js-jquery/css/WaterfallFlow.css
+++ b/Banner-js-jquery/css/WaterfallFlow.css
@@ -3,7 +3,14 @@
     padding: 0;
 }
 #head{
-
+}
+.line{
+    width: 100%;
+    height: 4px;
+    background-color: black;
+    border-radius: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 #head span{color: #888}
 #head a{
