--- a/Banner-js-jquery/css/WaterfallFlow.css
+++ b/Banner-js-jquery/css/WaterfallFlow.css
@@ -7,16 +7,16 @@
 .line{
     width: 100%;
     height: 4px;
-    background-color: black;
+    background-color: red;
     border-radius: 100%;
     margin-top: 5px;
     margin-bottom: 5px;
 }
-#head span{color: #888}
+#head span{color:orangered}
 #head a{
     margin: 0px 10px;
     text-decoration: none;
-    color: #888;
+    color: orangered;
 }
 
 #layout-mask{
